# UWLCM_plotting

./: README.md
Energy_spectrum/: spectrum.py  spectrum_refined.py
Matplotlib_common/: autoscale_y.py  latex_labels.py  plot_profs.py  plot_series.py  read_UWLCM_arrays.py
NC_vs_AF/: nc_vs_af.py  nc_vs_af_AFperCol.py
Size_spectra/: spectra.py
UWLCM_plotters/: CMakeLists.txt  UWLCM_plotters-config.cmake.in  uwlcm_plotters-config.cmake.in
UWLCM_plotters/include/: Plotter.hpp  Plotter2d.hpp  Plotter3d.hpp  PlotterCommon.hpp  PlotterH5.hpp  PlotterMask.hpp  PlotterMicro.hpp  common.hpp  common_filters.hpp  notice_macros.hpp
cases/Cumulus_Congestus/: Cumulus_Congestus_series_comparison.py  plot_ranges.py
cases/Dycoms_RF02/: Dycoms_series_comparison.py  plot_ranges.py
cases/Lasher_Trapp/: Lasher_Trapp_series_comparison.py  plot_ranges.py
cases/Pi_chamber/: Pi_chamber_profiles_comparison.py  Pi_chamber_series_comparison.py  plot_ranges.py
cases/RICO11/: Rico_series_comparison.py  plot_ranges.py
drawbicyc/: CMakeLists.txt  average.cpp  drawbicyc-config.cmake.in  drawbicyc.cpp  gnuplot_profs_set_labels.hpp  plot_fields.hpp  plot_series_compare.cpp  plots.hpp
drawbicyc/cases/Dycoms_RF02/: plots.hpp
drawbicyc/cases/Lasher_Trapp/: plots.hpp
drawbicyc/cases/RICO11/: plots.hpp
drawbicyc/include/: gnuplot_profs_set_labels.hpp  gnuplot_series_set_labels.hpp  plot_fields.hpp  plot_lgrngn_spec.hpp  plot_prof.hpp  plot_qv_qc_2_6_10_min.hpp  plot_series.hpp  plots.hpp
drawbicyc/include/cases/Cumulus_Congestus/: plots.hpp
drawbicyc/include/cases/Dycoms_RF02/: plots.hpp
drawbicyc/include/cases/PiChamber/: plots.hpp  plots_icmw.hpp
drawbicyc/include/cases/RICO11/: plots.hpp
drawbicyc/include/drawbicyc/: Plotter2d.hpp  Plotter3d.hpp  PlotterCommon.hpp  PlotterMicro.hpp  common.hpp  focus.hpp  gnuplot.hpp  gnuplot_profs_set_labels.hpp  gnuplot_series_set_labels.hpp  plot_fields.hpp  plot_prof.hpp  plot_series.hpp  plots.hpp
drawbicyc/include/drawbicyc/cases/Dycoms_RF02/: plots.hpp
drawbicyc/include/drawbicyc/cases/PiChamber/: plots.hpp  plots_icmw.hpp
drawbicyc/include/drawbicyc/cases/RICO11/: plots.hpp
drawbicyc/include/drawbicyc/cases/common_plots/GCCN_CCN_conc/: plots.hpp
drawbicyc/include/drawbicyc/cases/moist_thermal/: plots.hpp
histograms/: distribution_old.py  histogram.py
papers/AON_CC/: Fig_6.py  Fig_7.py  Fig_8.py  Fig_A1.py  README.md  prep_for_fig_7_8_A1.py
papers/GCCN_LES/: cl_nr_series.py  gccn_conc_profs.py  gccn_conc_profs_sc_cu_together.py  gccn_conc_profs_separate_ccn_data.py  gccn_rw_profs.py  plot_soundings.py  precip_accr_acnv_vs_GCCN.py  precip_vs_GCCN.py  results_vs_CCN.py  rwp_series.py  sgs_tke_series.py
papers/ICMW2020_CC/: compare_profs.py  compare_series.py
papers/ICMW2020_Pi_chamber/: prepare_profiles_for_icmw.py  read_UWLCM_1D_data.py
